apache 实现的调优；

--- a/Apache/www/index.html
+++ b/Apache/www/index.html
@@ -8,12 +8,21 @@
     #lg {
       text-align: center;
     }
+    input {
+      width: 300px;
+      height: 30px;
+      line-height: 30px;
+      border: 1px solid #dedede;
+      border-radius: 5px;
+      padding-left: 8px;
+    }
   </style>
   <title>web服务静态页面——百度</title>
 </head>
 <body>
   <div id="lg">
     <img hidefocus="true" src="//www.baidu.com/img/bd_logo1.png" width="270" height="129" usemap="#mp">
+    <div><input></div>
   </div>
 </body>
 </html>
