--- a/Apache/server/template.html
+++ b/Apache/server/template.html
@@ -4,8 +4,7 @@
     <meta name="google" value="notranslate" />
     <style>
       body {
-        display: flex;
-        align-items: center;
+        font-family: Arial, Helvetica, sans-serif;
       }
       h1 {
         border-bottom: 1px solid #c0c0c0;
@@ -63,7 +62,7 @@
 
       #listingParsingErrorBox {
         border: 1px solid black;
-        background: #fae691;
+        background: #07b687;
         padding: 10px;
         display: none;
       }
@@ -86,7 +85,7 @@
       <a
         id="parentDirLink"
         class="icon up"
-        href="/F:/Node%E5%AD%A6%E4%B9%A0demo%E6%A1%88%E4%BE%8B/www/.."
+        href="file:///E:/Demo/origin-node.js/Apache/"
       >
         <span id="parentDirText">[上级目录]</span>
       </a>
@@ -110,7 +109,7 @@
           </td>
           <td class="detailsColumn" data-value="0"></td>
           <td class="detailsColumn" data-value="1557196369">
-            2019/5/7 上午10:32:49
+            2019/12/03 下午15:01:49
           </td>
         </tr>
         {{/each}}
