node.js 本地服务配置IP访问及自动生成二维码

--- a/Apache/www/index.html
+++ b/Apache/www/index.html
@@ -2,11 +2,12 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,minimum-scale=1.0,user-scalable=no"> 
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <style>
     #lg {
       text-align: center;
+      margin-top: 50px;
     }
     input {
       width: 300px;
@@ -21,7 +22,7 @@
 </head>
 <body>
   <div id="lg">
-    <img hidefocus="true" src="//www.baidu.com/img/bd_logo1.png" width="270" height="129" usemap="#mp">
+    <img hidefocus="true" src="./img/google_logo.png" height="69" usemap="#mp">
     <div><input></div>
   </div>
 </body>
