--- a/Apache/server/template.html
+++ b/Apache/server/template.html
@@ -2,13 +2,60 @@
   <head>
     <meta charset="utf-8" />
     <meta name="google" value="notranslate" />
+	  <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,minimum-scale=1.0,user-scalable=no">
     <style>
-      body {
+      html, body {
+        width: 100%;
+        height: 100%;
+        overflow: hidden;
+        color:#fffef8;
+        margin: 0;
+        padding: 0;
+      }
+      .main {
+        width: 100%;
+        height: 100%;
         font-family: Arial, Helvetica, sans-serif;
+        background: #f7f4ed;
+        padding: 0 20px 0 20px;
+        box-sizing: border-box;
+        flex-direction: column;
+        background:#333;
+        overflow-x: hidden;
+        overflow-y: auto;
+      }
+      .main a {
+        color: #10aec2;
+      }
+      .banner {
+        width: 100%;
+        height: 120px;
+        overflow: hidden;
+        position: relative;
+        display: flex;
+        align-items: center;
+        justify-content: space-around;
+        background: #fffef9;
+        margin: 5px 0;
+        border-radius: 8px;
+      }
+      .banner>img {
+        margin: auto;
+        width: 145px;
+      }
+      #qrcode {
+        width:100px;
+        height:100px;
+        margin-top:15px;
+        margin: auto;
+      }
+      #qrcode>img {
+        width:100px;
+        height:100px;
       }
       h1 {
-        border-bottom: 1px solid #c0c0c0;
-        margin-bottom: 10px;
+        border-bottom: 1px solid#fffef9;
+        margin: 10px 0;
         padding-bottom: 10px;
         white-space: nowrap;
       }
@@ -68,52 +115,58 @@
       }
     </style>
 
-    <title id="title">www目录</title>
+    <title id="title">twoyoung本地服务目录</title>
+    <script type="text/javascript" src="http://static.runoob.com/assets/qrcode/qrcode.min.js"></script>
   </head>
 
   <body>
-    <div id="listingParsingErrorBox">
-      糟糕！Google Chrome无法解读服务器所发送的数据。请<a
-        href="http://code.google.com/p/chromium/issues/entry"
-        >报告错误</a
-      >，并附上<a href="LOCATION">原始列表</a>。
+    <div class="main">
+      <div id="listingParsingErrorBox">
+        糟糕！Google Chrome无法解读服务器所发送的数据。请<a href="http://code.google.com/p/chromium/issues/entry">报告错误</a>，并附上<a href="LOCATION">原始列表</a>。
+      </div>
+      <h1 id="header">本地服务目录</h1>
+      <div class="banner"><img src="../img/google_logo.png" alt="logo"><div id="qrcode"></div></div>
+      <div id="parentDirLinkBox" style="display: block;">
+        <a
+          id="parentDirLink"
+          class="icon up"
+          href="file:///E:/Demo/origin-node.js/Apache/"
+        >
+          <span id="parentDirText">[上级目录]</span>
+        </a>
+      </div>
+
+      <table>
+        <thead>
+          <tr class="header" id="theader">
+            <th onclick="javascript:sortTable(0);">名称</th>
+            <th></th>
+            <th class="detailsColumn" onclick="javascript:sortTable(2);">
+              修改日期
+            </th>
+          </tr>
+        </thead>
+        <tbody id="tbody">
+          {{each doc}}
+          <tr>
+            <td data-value="{{$value.file}}/">
+              <a class="icon dir" href="/{{$value.file}}">{{$value.file}}</a>
+            </td>
+            <td class="detailsColumn" data-value="0"></td>
+            <td class="detailsColumn" data-value="{{$value.time}}">
+              {{$value.time}}
+            </td>
+          </tr>
+          {{/each}}
+        </tbody>
+      </table>
     </div>
-
-    <h1 id="header">www目录</h1>
-
-    <div id="parentDirLinkBox" style="display: block;">
-      <a
-        id="parentDirLink"
-        class="icon up"
-        href="file:///E:/Demo/origin-node.js/Apache/"
-      >
-        <span id="parentDirText">[上级目录]</span>
-      </a>
-    </div>
-
-    <table>
-      <thead>
-        <tr class="header" id="theader">
-          <th onclick="javascript:sortTable(0);">名称</th>
-          <th></th>
-          <th class="detailsColumn" onclick="javascript:sortTable(2);">
-            修改日期
-          </th>
-        </tr>
-      </thead>
-      <tbody id="tbody">
-        {{each files}}
-        <tr>
-          <td data-value="{{$value}}/">
-            <a class="icon dir" href="/{{$value}}">{{$value}}</a>
-          </td>
-          <td class="detailsColumn" data-value="0"></td>
-          <td class="detailsColumn" data-value="1557196369">
-            2019/12/03 下午15:01:49
-          </td>
-        </tr>
-        {{/each}}
-      </tbody>
-    </table>
+    <script>
+      const elem = document.getElementById("qrcode");
+      const url = window.location.href || '---您访问的地址有问题----'
+      const qrcode = new QRCode(elem, url); // 生成二维码
+      // qrcode.clear(); // 清除代码
+      // qrcode.makeCode(url); // 另外生成一个 二维码
+    </script>
   </body>
 </html>
